[package]
name = "axum-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# axum ={ version = "0.7.5" }
tokio ={ version = "1",features = ["full"]}
tower = { version = "0.5.1", features = ["util", "timeout"] }
# tower-http = { version = "0.5.2" }

json = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


jsonwebtoken = "9.3.0"

# redis = "0.26.1"

futures = { version = "0.3", default-features = false }
thiserror = "1.0"
rbatis = "4.5.30"
rbdc-mysql = "4.5.11"
rbs = "4.5.20"
log = "0.4.22"
log4rs = "1.3.0"
redis = "0.27.2"
axum = "0.7.7"
tower-http = "0.6.1"

[profile.dev]
overflow-checks = false
strip = true

[profile.release]
overflow-checks = false
codegen-units = 16
lto = "fat"
opt-level = 3
strip = true
debug = 0
debug-assertions = false
panic = "abort"
incremental = false
